br removed from p

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,7 @@
           <hr />
           <p>
             Velkommen til min portfolio for 1. semester på
-            multimedieuddannelsen. <br />Udforsk de forskellige temaer for at se
-            hvad jeg har lært gennem semestret.
+            multimedieuddannelsen. Klik på et tema for at se hvad jeg har lært.
           </p>
         </div>
       </section>
