--- a/web.html
+++ b/web.html
@@ -37,27 +37,17 @@
           <hr />
           <p>
             Dette tema bestod af delopgaver der sammen udgjorde det færdige
-            site, der var et onepage responsivt site.
-          </p>
-          <p>
-            Opgaven blev lavet ud fra grundlæggende kode og designprocesser, som
-            vi trinvist blev introduceret til, og fik erfaring med, gennem
-            delopgaverne.
-          </p>
-          <p>
-            Det var i tema 2 vi blev mødt med kode for første gang og her vi fik
-            en større forståelse for HTML og CSS, der er blev grundlæggende
-            værktøjer gennem resten af semestret.
-          </p>
-          <p>
-            På det designmæssige plan lærte vi de grundlæggende principper for
-            komposition, layout, praksisnære designprocesser og
-            dokumentationsformer, såsom mod board og styletile, i digital
-            medieproduktion.
-          </p>
-          <p>
-            Sidst fik vi også erfaring med Adobe Photoshop gennem udarbejdelsen
-            af vores splashbillede, der blev lavet ud fra en bestemt stilart.
+            site, der var et onepage responsivt site. Opgaven blev lavet ud fra
+            grundlæggende kode og designprocesser, som vi trinvist blev
+            introduceret til, og fik erfaring med, gennem delopgaverne. Det var
+            i tema 2 vi blev mødt med kode for første gang og her vi fik en
+            større forståelse for HTML og CSS, der er blev grundlæggende
+            værktøjer gennem resten af semestret. På det designmæssige plan
+            lærte vi de grundlæggende principper for komposition, layout,
+            praksisnære designprocesser og dokumentationsformer, såsom mod board
+            og styletile, i digital medieproduktion. Sidst fik vi også erfaring
+            med Adobe Photoshop gennem udarbejdelsen af vores splashbillede, der
+            blev lavet ud fra en bestemt stilart.
           </p>
         </div>
       </section>
@@ -137,21 +127,15 @@
             >
           </button>
         </div>
+      </section>
 
-        <section class="wide">
-          <div>
-            <h2>DOKUMENTATION</h2>
-            <div class="web_doku">
-              <img src="billeder/Web_moodboard_1.webp" />
-            </div>
-            <div class="web_doku">
-              <img src="billeder/Web_moodboard_2.webp" />
-            </div>
-            <div class="web_doku">
-              <img src="billeder/Web_moodboard_3.webp" />
-            </div>
-          </div>
-        </section>
+      <section class="wide_2">
+        <div class="web_doku">
+          <h2>DOKUMENTATION</h2>
+          <img src="billeder/Web_moodboard_1.webp" />
+          <img src="billeder/Web_moodboard_2.webp" />
+          <img src="billeder/Web_moodboard_3.webp" />
+        </div>
       </section>
     </main>
 
