section added to animation site

--- a/animation.html
+++ b/animation.html
@@ -31,16 +31,41 @@
     </header>
 
     <main>
-      <section>
-        <img src="billeder/splash_portfolio_2.webp" />
-      </section>
-      <section>
-        <h2>GRUNDLÆGGENDE ANIMATION</h2>
+      <section class="forord">
+        <div class="text_indhold">
+          <h1>04 ANIMATION</h1>
+          <hr />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            id, dolor repudiandae libero neque, perferendis similique minus
+            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
+            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
+            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
+            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
+            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
+            consequatur, expedita nostrum mollitia sed cupiditate officiis
+            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
+            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
+            voluptatem impedit dolore ab cupiditate, at porro velit quae
+            dignissimos tempore explicabo, doloremque non sapiente excepturi
+            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
+            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
+            provident delectus corrupti similique impedit ipsum iusto cum sunt
+            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
+            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
+            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
+            quaerat est maxime deserunt. Veritatis inventore at a sit minima
+            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
+            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
+            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
+            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+          </p>
+        </div>
       </section>
 
       <section>
-        <img src="billeder/spil.webp" />
-        <h2>spil</h2>
+        <img src="billeder/test_spilskaerm.png" />
+        <h2>SPILLET</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
           assumenda porro natus, reiciendis delectus autem nostrum aliquam,
@@ -56,8 +81,8 @@
       </section>
 
       <section>
-        <img src="billeder/spil.webp" />
-        <h2>spil website</h2>
+        <img src="billeder/spil_test.png" />
+        <h2>SPIL WEBSITE</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
           nam accusamus eligendi consequatur, ex obcaecati similique ut
@@ -68,6 +93,15 @@
             >SPIL WEBSITE</a
           >
         </button>
+      </section>
+      <section class="wide_2">
+        <div class="ux_doku">
+          <div class="ux_doku_indhold">
+            <h2>DOKUMENTATION</h2>
+            <button>DOKUMENTATION</button>
+            <button>IDE</button>
+          </div>
+        </div>
       </section>
     </main>
 
