content added to content site

--- a/content.html
+++ b/content.html
@@ -31,16 +31,40 @@
     </header>
 
     <main>
-      <section>
-        <img src="billeder/baggrundsbillede_1.webp" />
+      <section class="forord">
+        <div class="text_indhold">
+          <h1>05 CONTENT</h1>
+          <hr />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            id, dolor repudiandae libero neque, perferendis similique minus
+            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
+            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
+            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
+            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
+            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
+            consequatur, expedita nostrum mollitia sed cupiditate officiis
+            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
+            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
+            voluptatem impedit dolore ab cupiditate, at porro velit quae
+            dignissimos tempore explicabo, doloremque non sapiente excepturi
+            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
+            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
+            provident delectus corrupti similique impedit ipsum iusto cum sunt
+            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
+            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
+            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
+            quaerat est maxime deserunt. Veritatis inventore at a sit minima
+            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
+            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
+            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
+            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+          </p>
+        </div>
       </section>
 
       <section>
-        <h1>CONTENT</h1>
-      </section>
-
-      <section>
-        <img src="billeder/pilot_projekt.webp" />
+        <img src="billeder/pilot_projekt_test.png" />
         <h2>Pilot projekt</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
@@ -65,7 +89,7 @@
       </section>
 
       <section>
-        <img src="billeder/redesign.webp" />
+        <img src="billeder/redesign_test.png" />
         <h2>Resign</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum
@@ -80,6 +104,14 @@
         <button>
           <a href="0" target="_blank">DOKUMENTATION</a>
         </button>
+      </section>
+
+      <section class="wide_2">
+        <div class="ux_doku">
+          <div class="ux_doku_indhold">
+            <h2>DOKUMENTATION</h2>
+          </div>
+        </div>
       </section>
     </main>
 
