forord class added to ux site

--- a/ux.html
+++ b/ux.html
@@ -31,10 +31,66 @@
     </header>
 
     <main>
+      <section class="forord">
+        <div class="text_indhold">
+          <h1>03 UX</h1>
+          <hr />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            id, dolor repudiandae libero neque, perferendis similique minus
+            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
+            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
+            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
+            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
+            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
+            consequatur, expedita nostrum mollitia sed cupiditate officiis
+            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
+            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
+            voluptatem impedit dolore ab cupiditate, at porro velit quae
+            dignissimos tempore explicabo, doloremque non sapiente excepturi
+            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
+            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
+            provident delectus corrupti similique impedit ipsum iusto cum sunt
+            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
+            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
+            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
+            quaerat est maxime deserunt. Veritatis inventore at a sit minima
+            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
+            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
+            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
+            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+          </p>
+        </div>
+      </section>
+
       <section>
-        <img src="billeder/ux_prototype.webp" />
+        <img src="billeder/UX_test.png" />
         <h2>GRUNDLÆGGENDE UX</h2>
-        <p>temabeskrivelse</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
+          tenetur consequatur quibusdam earum quasi ratione modi reiciendis
+          totam ea aliquam? Consequuntur nesciunt dicta et voluptas incidunt.
+          Perferendis quae similique eum libero fuga explicabo quos dolore
+          aperiam earum nesciunt. Accusantium, harum. Impedit nisi rem qui magni
+          doloremque velit maxime nesciunt reprehenderit inventore, pariatur
+          obcaecati dolor iure molestiae tempora excepturi accusamus
+          consequuntur autem eaque. Nam nesciunt aliquam perspiciatis delectus
+          modi inventore ad sit est doloribus quibusdam! Vero ipsum culpa
+          tempora maiores delectus officiis recusandae ad dolorum nam magnam.
+          Nisi repellat eius voluptatibus earum fuga. Animi veritatis,
+          dignissimos esse culpa odio libero autem sequi odit repudiandae, ad
+          voluptate nostrum ullam dolorem cum quibusdam, porro nesciunt error
+          quaerat distinctio exercitationem unde iste ut voluptas. Rerum ab sunt
+          vitae nisi aliquid error blanditiis ad necessitatibus? Ipsam soluta
+          optio vitae officia quam nisi, delectus in incidunt mollitia natus
+          doloribus impedit, nihil repellendus similique nobis maiores veritatis
+          facere eos est hic distinctio. Voluptas voluptates inventore earum,
+          officiis excepturi unde ipsum magnam eaque aliquam obcaecati
+          voluptatibus omnis molestias a delectus sequi dolore distinctio vel
+          totam eius facilis vitae nesciunt quas est optio? Suscipit magni culpa
+          quas facilis consequatur doloremque cupiditate, illo, autem error
+          quaerat nulla molestiae temporibus consequuntur.
+        </p>
         <button>
           <a
             href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
@@ -42,9 +98,22 @@
             >SE PROTOTYPE</a
           >
         </button>
-        <button>
-          <a href="0">SE DOKUMENTATION</a>
-        </button>
+      </section>
+
+      <section class="wide_2">
+        <div class="ux_doku">
+          <div class="ux_doku_indhold">
+            <h2>DOKUMENTATION</h2>
+
+            <button>koncept</button>
+            <button>desk research</button>
+            <button>observations research</button>
+            <button>Interview research</button>
+            <button>Survey research</button>
+            <button>Solution Sketch</button>
+            <button>test af prototyoe</button>
+          </div>
+        </div>
       </section>
     </main>
 
