--- a/animation.html
+++ b/animation.html
@@ -64,7 +64,10 @@
       </section>
 
       <section>
-        <img src="billeder/test_spilskaerm.png" />
+        <h2>OPGAVER I TEMAET</h2>
+        <div class="temabillede">
+          <img src="billeder/spil_portfolio.png" />
+        </div>
         <h2>SPILLET</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
@@ -81,7 +84,9 @@
       </section>
 
       <section>
-        <img src="billeder/spil_test.png" />
+        <div class="temabillede">
+          <img src="billeder/spil_web_portfolio.png" />
+        </div>
         <h2>SPIL WEBSITE</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
