--- a/content.html
+++ b/content.html
@@ -64,7 +64,10 @@
       </section>
 
       <section>
-        <img src="billeder/pilot_projekt_test.png" />
+        <h2>OPGAVER I TEMAET</h2>
+        <div class="temabillede">
+          <img src="billeder/pilot_portfolio.png" />
+        </div>
         <h2>Pilot projekt</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
@@ -89,7 +92,9 @@
       </section>
 
       <section>
-        <img src="billeder/redesign_test.png" />
+        <div class="temabillede">
+          <img src="billeder/redesign_portfolio.png" />
+        </div>
         <h2>Resign</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum
