--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <section class="splash">
-        <img src="billeder/splash_portfolio_3.webp" alt="test" />
+        <img src="billeder/splash_portfolio_3.png" alt="test" />
 
         <h1>PORTFOLIO</h1>
         <p>MMD 1. SEMESTER F2021</p>
