--- a/om_mig.html
+++ b/om_mig.html
@@ -57,7 +57,7 @@
 
       <section>
         <div class="section_wrapper">
-          <div class="round">
+          <div class="round_2">
             <img src="billeder/profilbillede.webp" />
           </div>
           <div>
