--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
         <div class="section_wrapper">
           <div class="col_left_top">
             <div class="image">
-              <img src="billeder/responsive_test.png" />
+              <img src="billeder/responsive_portfolio.png" />
             </div>
             <div class="text">
               <h2>02 WEB</h2>
@@ -68,7 +68,7 @@
         <div class="section_wrapper">
           <div class="col_right">
             <div class="image">
-              <img src="billeder/UX_test.png" />
+              <img src="billeder/ux_portfolio.png" />
             </div>
             <div class="text">
               <h2>03 UX</h2>
@@ -91,7 +91,7 @@
         <div class="section_wrapper">
           <div class="col_left">
             <div class="image">
-              <img src="billeder/spil_test.png" />
+              <img src="billeder/spil_portfolio.png" />
             </div>
             <div class="text">
               <h2>04 ANIMATION</h2>
@@ -113,7 +113,7 @@
         <div class="section_wrapper">
           <div class="col_right_bottom">
             <div class="image">
-              <img src="billeder/redesign_test.png" />
+              <img src="billeder/pilot_portfolio.png" />
             </div>
             <div class="text">
               <h2>05 CONTENT</h2>
