--- a/ux.html
+++ b/ux.html
@@ -64,7 +64,10 @@
       </section>
 
       <section>
-        <img src="billeder/UX_test.png" />
+        <h2>OPGAVER I TEMAET</h2>
+        <div class="temabillede">
+          <img src="billeder/ux_portfolio.png" />
+        </div>
         <h2>GRUNDLÆGGENDE UX</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
