class added to pic

--- a/web.html
+++ b/web.html
@@ -55,8 +55,8 @@
       <section>
         <h2>OPGAVER I TEMAET</h2>
         <div>
-          <div>
-            <img src="billeder/responsive_test.png" />
+          <div class="temabillede">
+            <img src="billeder/responsive_portfolio.png" />
           </div>
           <div>
             <h2>02.02.04</h2>
