class changed from forord to wide

--- a/animation.html
+++ b/animation.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section class="forord">
+      <section class="wide">
         <div class="text_indhold">
           <h1>04 ANIMATION</h1>
           <hr />
@@ -84,9 +84,14 @@
       </section>
 
       <section>
-        <div class="temabillede">
-          <img src="billeder/spil_web_portfolio.png" />
+        <div class="section_wrapper">
+          <div class="temabillede right">
+            <img src="billeder/spil_web_portfolio.png" />
+          </div>
         </div>
+      </section>
+
+      <section>
         <h2>SPIL WEBSITE</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
@@ -99,9 +104,10 @@
           >
         </button>
       </section>
+
       <section class="wide_2">
-        <div class="ux_doku">
-          <div class="ux_doku_indhold">
+        <div class="doku">
+          <div class="doku_indhold">
             <h2>DOKUMENTATION</h2>
             <button>DOKUMENTATION</button>
             <button>IDE</button>
