forord changed to wide class

--- a/content.html
+++ b/content.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section class="forord">
+      <section class="wide">
         <div class="text_indhold">
           <h1>05 CONTENT</h1>
           <hr />
@@ -92,14 +92,19 @@
       </section>
 
       <section>
-        <div class="temabillede">
-          <img src="billeder/redesign_portfolio.png" />
+        <div class="section_wrapper">
+          <div class="temabillede right">
+            <img src="billeder/redesign_portfolio.png" />
+          </div>
         </div>
-        <h2>Resign</h2>
+      </section>
+
+      <section>
+        <h2>REDESIGN</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum
-          ipsam at amet assumenda tempora voluptatem nam, cupiditate fugit ullam
-          minus minima sed dicta animi ab aliquid ipsa. Commodi, officia?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
+          nam accusamus eligendi consequatur, ex obcaecati similique ut
+          architecto est.
         </p>
         <button>
           <a href="https://musing-shirley-56f439.netlify.app/" target="_blank"
@@ -112,8 +117,8 @@
       </section>
 
       <section class="wide_2">
-        <div class="ux_doku">
-          <div class="ux_doku_indhold">
+        <div class="doku">
+          <div class="doku_indhold">
             <h2>DOKUMENTATION</h2>
           </div>
         </div>
