forord changed to wide

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     </header>
 
     <main id="portfolio">
-      <section class="forord">
+      <section class="wide">
         <div class="text_indhold">
           <h1>PORTFOLIO</h1>
           <hr />
