forord changed to wide

--- a/ux.html
+++ b/ux.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section class="forord">
+      <section class="wide">
         <div class="text_indhold">
           <h1>03 UX</h1>
           <hr />
@@ -104,8 +104,8 @@
       </section>
 
       <section class="wide_2">
-        <div class="ux_doku">
-          <div class="ux_doku_indhold">
+        <div class="doku">
+          <div class="doku_indhold">
             <h2>DOKUMENTATION</h2>
 
             <button>koncept</button>
