--- a/web.html
+++ b/web.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <section class="forord">
+      <section class="wide">
         <div class="text_indhold">
           <h1>02 WEB</h1>
           <hr />
