--- a/animation.html
+++ b/animation.html
@@ -36,29 +36,14 @@
           <h1>04 ANIMATION</h1>
           <hr />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-            id, dolor repudiandae libero neque, perferendis similique minus
-            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
-            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
-            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
-            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
-            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
-            consequatur, expedita nostrum mollitia sed cupiditate officiis
-            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
-            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
-            voluptatem impedit dolore ab cupiditate, at porro velit quae
-            dignissimos tempore explicabo, doloremque non sapiente excepturi
-            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
-            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
-            provident delectus corrupti similique impedit ipsum iusto cum sunt
-            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
-            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
-            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
-            quaerat est maxime deserunt. Veritatis inventore at a sit minima
-            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
-            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
-            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
-            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+            Dette tema var delt op i forskellige faser, hvor vi gradvist
+            opbyggede vores eget interaktive animerede spil. Derudover var der
+            mange små opgaver der skulle introducere os til - og træne os i -
+            JavaScript, CSS-animationer, Git, Adobe illustrator til rentegning
+            af spildesign samt Adobe Audition til spil lyd. Sidst skulle vi lave
+            et dokumentationssite der indeholdt en assetliste, beskrivelse af
+            ideen samt selve spillet. Temaet lærte os at fremstille interaktive
+            brugergrænseflader der engagerer og motiverer brugeren.
           </p>
         </div>
       </section>
@@ -69,12 +54,59 @@
           <img src="billeder/spil_portfolio.png" />
         </div>
         <h2>SPILLET</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
-          assumenda porro natus, reiciendis delectus autem nostrum aliquam,
-          veritatis nulla sed temporibus saepe. Autem nobis mollitia tempore
-          natus quas exercitationem provident.
-        </p>
+        <div class="paragraph">
+          <p>
+            Denne del af temaet bestod af kodning, hvor vi fik kendskab til
+            grundlæggende JavaScript samt CSS-animationer.
+          </p>
+          <p>
+            Vi startede med at placere spilscenen vha. HTML samt CSS hvorefter
+            vi placerede spil og ui-elementerne. Her lærte vi om CSS-animationer
+            til at animere enkelte spilelementer gennem container og sprite
+            princippet der gør det muligt at animere container og sprite hver
+            for sig. Derefter skulle vi lære at styre de forskellige elementer
+            vha. JavaScript. Vi startede med funktioner, console.log samt
+            document.querySelector(”selector”). Derudover skulle vi lave en
+            simpel start/stop animation og elementer der skulle forsvinde
+            hvorefter nye kom til. Her benyttede vi os af
+            addEventListener(”click/animationend/animationiteration/load”) samt
+            classList add/remove(”class”) og math.random.
+          </p>
+          <p>
+            I efterfølgende fase programmerede vi funktionerne til optjening af
+            point at miste liv samt tabe og vinde spillet. Hvor vi som noget nyt
+            lærte om betingelser (if-else).
+          </p>
+          <p>
+            Under udvikling af spillet benyttede vi os af Inspector (consol)
+            hvilket hjalp mig med fejlfinding af kode. Ved hjælp af state
+            machine diagrammet jeg lavede i første fase, fik jeg et visuelt
+            overblik over funktionsnavne og hvad der skulle ske under hver
+            funktion ift. animation ud fra hvad der skulle ske med container og
+            sprite på et spilelement.
+          </p>
+          <p>
+            I næstsidste fase skulle lyden til spillet optages, hvor vi lærte at
+            rense støj vha. Adobe Audition og styre lyden vha. JavaScript. Vi
+            fik også tricks til forbedre vores spil og implementere supplerende
+            funktioner. Jeg benyttede mig af position array, da jeg havde et
+            whack-a-mole type spil hvor jeg ikke ønskede at mine spilelementer
+            poppede op det samme sted. Derudover øgede jeg sværhedsgraden med en
+            betingelse (if-else) ud fra point hvor hastigheden steg ud fra et
+            vis antal point.
+          </p>
+          <p>
+            Spillet testet i grupper i klassen. Ud fra feedback kunne jeg
+            konstatere at det ikke var tydeligt nok med spilfigurernes
+            rolle/konsekvenser ift. liv og point. Der var også tvivl om hvad der
+            skulle til for at vinde eller tabe spillet. Løsninger på dette kunne
+            være en infoskærm med forklaring om spilelementerne og en lille
+            tekst i vinder-og taberskærmen der forklarede reglerne. Derudover
+            blev jeg gjort opmærksom på en fejl der gjorde at man kunne klippe
+            på spilelementerne efter de var gået i skjul, hvilket jeg nåede at
+            løse efterfølgende.
+          </p>
+        </div>
         <button>
           <a
             href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
@@ -93,11 +125,48 @@
 
       <section>
         <h2>SPIL WEBSITE</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
-          nam accusamus eligendi consequatur, ex obcaecati similique ut
-          architecto est.
-        </p>
+        <div class="paragraph">
+          <p>
+            I temaet begyndte vi med design og koncept af spillet, hvor vi blev
+            undervist i ide-genereringsteknikker, som mindmap, formgivnings- og
+            kompositions teknikker samt design af UI og spilelementer såsom
+            baggrund design, figurdesign m.m.
+          </p>
+          <p>
+            Jeg benyttede mig af mindmap metoden for at udvælge mit koncept. Jeg
+            endte med myten om at elefanter er bange for mus. Spillet går ud på
+            at man skal fange et vis antal mus inden elefanten når at gå i panik
+            og ødelægge sit hjem. Da konceptet var valgt, lavede jeg en lo-fi
+            paper prototype, for at teste og evt. finde fejl, samt
+            aktivitetsdiagram og state machine diagram for at skabte overblik
+            over kodningen i JavaScript. Ud fra en valgt stil skulle vi lavede
+            moodboard og styletile, hvor jeg valgte Owen Davey, der kort
+            beskrevet kombinerer 2D med detaljer der skaber en vis 3D effekt.
+            Herefter skulle spilelementerne skitseres i hånden og efterfølgende
+            rentegnes i Adobe Illustrator.
+          </p>
+          <p>
+            I sidste fase af temaet skulle dette dokumenteres med et
+            dokumentationssite med en assetliste. Her fik vi undervisning i
+            hvordan man bedst muligt planlægger et website på kort tid. Gennem
+            udarbejdelsen af websitet fik jeg genopfrisket meget viden og trænet
+            mange færdigheder fra tema 2 såsom layoutdiagrammer. grids, margin,
+            padding m.m.
+          </p>
+          <p>
+            Da websitet var færdigt, skulle det præsenteres for en lærer, hvor
+            jeg fik feedback for både spillet og websitet. Her lærte jeg at
+            pointsystemet angivet ”/20” kunne være demotiverende da man ville
+            stoppe med at prøve at fange mus efter de 20. Derudover kunne
+            spillet have været mere spændende med en scene hvor der var tilføjet
+            mikroanimationer, fx med elefanten i baggrunden der bevægede sig.
+            Derudover kunne scenen godt have haft flere detaljer, såsom hø og
+            musen kunne godt have aftegninger af pels når nu fuglenes vinger var
+            forholdsvis detaljerede. Men generelt havde spillet fine lyde, fine
+            figurer og en god sværhedsgrad, hvor det ikke var for nemt og man
+            havde lyst til at prøve igen.
+          </p>
+        </div>
         <button>
           <a href="http://ceciliejasmin.dk/kea/04_animation/website/"
             >SPIL WEBSITE</a
