--- a/content.html
+++ b/content.html
@@ -36,29 +36,13 @@
           <h1>05 CONTENT</h1>
           <hr />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-            id, dolor repudiandae libero neque, perferendis similique minus
-            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
-            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
-            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
-            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
-            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
-            consequatur, expedita nostrum mollitia sed cupiditate officiis
-            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
-            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
-            voluptatem impedit dolore ab cupiditate, at porro velit quae
-            dignissimos tempore explicabo, doloremque non sapiente excepturi
-            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
-            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
-            provident delectus corrupti similique impedit ipsum iusto cum sunt
-            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
-            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
-            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
-            quaerat est maxime deserunt. Veritatis inventore at a sit minima
-            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
-            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
-            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
-            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+            Dette tema består af et individuelt pilotprojekt samt en
+            gruppeopgave i redesign. Her lærte vi om grundlæggende indførsel og
+            faglige begreber i videoproduktion, herunder forarbejdet inden man
+            skal optage såsom udarbejdelsen af synopsis, om selve optagelsen med
+            smartphone, DSLR-kamera og supplerende udstyr som mikrofoner m.m.
+            samt postproduktion. Gennem opgaverne fik lært færdigheder indenfor
+            Adobe Audition, Adobe Premiere Pro, HTML, CSS samt lidt JavaScript.
           </p>
         </div>
       </section>
@@ -68,13 +52,52 @@
         <div class="temabillede">
           <img src="billeder/pilot_portfolio.png" />
         </div>
-        <h2>Pilot projekt</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium
-          et ea nesciunt voluptate soluta, eos doloremque molestiae. Quibusdam
-          assumenda esse nemo similique harum nobis necessitatibus repellendus
-          non doloribus, eaque suscipit!
-        </p>
+        <h2>PILOT PROJEKT</h2>
+        <div class="paragraph">
+          <p>
+            I denne opgave skulle vi i grupper af 2 lave et interview vi
+            derefter kunne klippe sammen til en film på 1 minut. Filmen skulle
+            indeholde en person der beretter om en passion, B-rolls,
+            establishing shot med min. 5 klip med min. 3 forskellige framings og
+            lyd fra ekstern lydkilde.
+          </p>
+          <p>
+            Vi fik undervisning i dramaturgi, hvor vi lærte om
+            billedekomposition som det gyldne snit, luft over hovedet samt luft
+            i blik og taleretning. Her lærte vi også om 5-skudsreglen.
+          </p>
+          <p>
+            Vi fik færdigheder i Premiere Pro hvor vi lærte om klipning,
+            transitions, synkronisering af lyd, colorgrading, hvidbalance m.m.
+          </p>
+          <p>
+            Derudover lærte vi om forarbejdet inden optagelser, hvor vi blandt
+            udarbejdede en synopsis bestående af præmis, logline, koncept,
+            storyboard samt interview. Her skulle vi bruge vores viden om
+            dramaturgi for at planlægge de bedste optagelser.
+          </p>
+          <p>
+            Vi fik også undervisning i udstyr til optagelser såsom manual
+            indstilling af et DSLR-kamera, herunder blændetal og hvordan man
+            filmer i RAW-format og gode råd til lydoptagelser med ekstern
+            lydkilde.
+          </p>
+          <p>
+            Under videoredigeringen fandt jeg ud af at vores video var i ret
+            dårlig kvalitet trods det var filmet i RAW-format. Jeg fandt ud af
+            at jeg havde indstillet ISOen alt for højt under optagelserne,
+            hvilket resulterede i billedstøjen. Jeg havde ikke erfaring nok med
+            indstilling af DSLR-kamera til at vide dette på forhånd, men nu ved
+            jeg i fremtiden at det er noget jeg skal være opmærksom på.
+          </p>
+          <p>
+            Sidst skulle også prøve kræfter med at indsætte to slags videoer til
+            et website; en man har uploadet til sit domæne og et man har
+            uploadet til YouTube. I den forbindelse lærte vi bl.a. om HTML5
+            video tagget. Websitet var et vi selv skulle lave og skulle nærmest
+            fungere som en slags filmplakat for de to videoer.
+          </p>
+        </div>
 
         <button>
           <a
@@ -101,11 +124,68 @@
 
       <section>
         <h2>REDESIGN</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugiat
-          nam accusamus eligendi consequatur, ex obcaecati similique ut
-          architecto est.
-        </p>
+        <div class="paragraph">
+          <p>
+            I denne opgave skulle vi i grupper af 4 finde en virksomhed hvor vi
+            kunne redesigne deres website.
+          </p>
+          <p>
+            Opgaven var bygget op omkring dobbelt diamant som udviklingsmetode,
+            med discover, define, develop og deliver faser. I gruppearbejdet
+            blev vi introduceret for SCRUM og trello boards, hvilket lærte os om
+            projekt planlægning og motivation under større opgaver.
+          </p>
+          <p>
+            Vores virksomhed blev Osvald Jensen der producerer transmissionsdele
+            til andre virksomheder. Vi lavede en analyse over virksomheden, hvor
+            vi undersøgte virksomhedsprofilen, brugerprofiler og lavede analyse
+            af eksisterende site med fokus på fotostil, indholdsoversigt samt
+            funktionalitetstest. Vi lavede desuden styletile over eksisterende
+            site.
+          </p>
+          <p>
+            Vi benyttede os af flere testmetoder både før og efter redesign for
+            at kunne sammenligne resultatet. Det var blandt andet 5 sec-testen,
+            hvor vi får indblik i brugerens førstehåndsindtryk, BERT-test der
+            undersøger brugernes opfattelse af websitet samt Lighthouse audit,
+            der aspekter af URL herunder performance, accesability, best
+            practices og SEO. Ud fra disse tests kunne vi konkludere at sitet
+            var blevet forbedret i alle tests efter redesign. Dog kunne vi ikke
+            ramme målgruppen, der var andre virksomheder, og derfor er der en
+            chance for at resultatet kunne have været anderledes. Derfor lærte
+            vi vigtigheden af at teste på den rigtige målgruppe.
+          </p>
+          <p>
+            Under planlægning af redesignet lavede vi en sitemap over
+            eksisterende website for at danne os overblik over strukturen på
+            siden. Her opdagede vi at der var for mange sider, så da vi
+            efterfølgende lavede sitemap til redesignet samlede vi flere sider
+            til en. Derefter lavede vi moodboard, wireframe, layoutdiagrammer
+            samt en HI-FI-prototype over det nye site. Det gav os en masse
+            overblik da vi senere skulle kode.
+          </p>
+          <p>
+            Inden optagelserne lavede vi en synopsis og sendte interviewguiden
+            til product owner inden optagelse.
+          </p>
+          <p>
+            Postproduktion benyttede vi os af de færdigheder vi havde lært i
+            Premiere Pro og Audition til produktion af nyt indhold i form af en
+            virksomhedsvideo, en kvadratisk Facebook video samt flere
+            herovideoer til websitet.
+          </p>
+          <p>
+            Senere i temaet blev vi undervist i hvordan man laver en burgermenu
+            vha. JavaScript samt hvordan man sætter tekst ovenpå en video med
+            CSS.
+          </p>
+          <p>
+            Sidst skulle redesignet præsenteres for klassen med feedback. Her
+            lærte vi at vores design var for mørkt på websitet, hvilket gjorde
+            det svært at se indholdet. Derudover fik vi kritik for målgruppen
+            som vi ikke helt kunne ramme.
+          </p>
+        </div>
         <button>
           <a href="https://musing-shirley-56f439.netlify.app/" target="_blank"
             >BESØG WEBSITE</a
