--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <p>MMD 1. SEMESTER F2021</p>
       </section>
 
+      <section class="wide">
+        <div class="text_indhold">
+          <h2>VELKOMMEN</h2>
+          <hr />
+          <p>
+            Dette er min portfolio opgave som også var tema 6 i første semester.
+          </p>
+        </div>
+      </section>
+
       <section>
         <div class="section_wrapper">
           <div>
