--- a/ux.html
+++ b/ux.html
@@ -36,29 +36,14 @@
           <h1>03 UX</h1>
           <hr />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-            id, dolor repudiandae libero neque, perferendis similique minus
-            mollitia explicabo pariatur architecto magnam! Blanditiis impedit
-            illo obcaecati, nulla cupiditate perferendis fugiat animi? Ipsa enim
-            ipsum inventore voluptates debitis itaque iusto! Iusto facilis,
-            illum amet eius ipsa corrupti quas ipsum a ullam. Porro nemo
-            molestiae ab cumque dicta. Non atque nemo dolorem ad voluptates
-            consequatur, expedita nostrum mollitia sed cupiditate officiis
-            aliquid provident cumque. Hic cupiditate sit quae commodi? Est, vel
-            doloremque? Sit, a! Vel cum nesciunt aliquam. Voluptates unde optio
-            voluptatem impedit dolore ab cupiditate, at porro velit quae
-            dignissimos tempore explicabo, doloremque non sapiente excepturi
-            voluptatibus veniam aspernatur officia iste nulla. Fugit officia
-            fugiat aspernatur amet, consectetur ullam quasi suscipit itaque
-            provident delectus corrupti similique impedit ipsum iusto cum sunt
-            nobis doloribus eaque sint reiciendis quaerat eligendi dicta
-            tenetur. Assumenda dolore esse iure eveniet cum minus eaque
-            asperiores laudantium quae explicabo odit nobis, doloribus molestiae
-            quaerat est maxime deserunt. Veritatis inventore at a sit minima
-            ratione ullam nisi, veniam laborum pariatur esse asperiores incidunt
-            cupiditate dolorem architecto eos quam voluptatum. Nisi deserunt
-            deleniti dolore sunt! Itaque minima quia soluta, in ex maiores vero,
-            nesciunt fugiat excepturi, dolorum ullam sunt? Ipsam.
+            Dette tema lærte om os forskellige research metoder, hvor vi
+            indsamlede data og behandlede dem for at opnå en større
+            brugerforståelse. Det var bl.a. gennem desk research, surveys og
+            interviews. Under temaet udarbejdede vi en klikbar, hi-fi-prototype
+            der løbende kunne testes og forbedres. Her skulle vi også skrive
+            copy og microcopy tekster for at motivere brugeren. Sidst skulle vi
+            lave et pitch hvor vi ud fra præsentationen skulle bevise hvordan vi
+            havde behandlet de data vi havde indsamlet til reelle løsninger.
           </p>
         </div>
       </section>
@@ -70,35 +55,62 @@
         </div>
         <h2>GRUNDLÆGGENDE UX</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
-          tenetur consequatur quibusdam earum quasi ratione modi reiciendis
-          totam ea aliquam? Consequuntur nesciunt dicta et voluptas incidunt.
-          Perferendis quae similique eum libero fuga explicabo quos dolore
-          aperiam earum nesciunt. Accusantium, harum. Impedit nisi rem qui magni
-          doloremque velit maxime nesciunt reprehenderit inventore, pariatur
-          obcaecati dolor iure molestiae tempora excepturi accusamus
-          consequuntur autem eaque. Nam nesciunt aliquam perspiciatis delectus
-          modi inventore ad sit est doloribus quibusdam! Vero ipsum culpa
-          tempora maiores delectus officiis recusandae ad dolorum nam magnam.
-          Nisi repellat eius voluptatibus earum fuga. Animi veritatis,
-          dignissimos esse culpa odio libero autem sequi odit repudiandae, ad
-          voluptate nostrum ullam dolorem cum quibusdam, porro nesciunt error
-          quaerat distinctio exercitationem unde iste ut voluptas. Rerum ab sunt
-          vitae nisi aliquid error blanditiis ad necessitatibus? Ipsam soluta
-          optio vitae officia quam nisi, delectus in incidunt mollitia natus
-          doloribus impedit, nihil repellendus similique nobis maiores veritatis
-          facere eos est hic distinctio. Voluptas voluptates inventore earum,
-          officiis excepturi unde ipsum magnam eaque aliquam obcaecati
-          voluptatibus omnis molestias a delectus sequi dolore distinctio vel
-          totam eius facilis vitae nesciunt quas est optio? Suscipit magni culpa
-          quas facilis consequatur doloremque cupiditate, illo, autem error
-          quaerat nulla molestiae temporibus consequuntur.
+          I opgaven skulle vi udarbejde en klikbar, HI-FI-prototype til en
+          t-shirt webshop. Vi skulle selv finde på en USP der kunne løse en
+          problemstilling ud fra en valgt målgruppe. Min målgruppe var 18-30 år
+          og min problemstilling var den store konkurrence i tøjbranchen samt
+          besværligheden ved at returnere tøj når man shopper online, ofte fordi
+          tøjet ikke passer. Løsningen blev bæredygtige unisex t-shirts hvor man
+          kunne hyre en designer/skrædder og derved sikre perfekt pasform samt
+          tilbyde custom made designs. Her lærte jeg både at tænke på
+          virksomhedens brand samt brugerens oplevelse. Ideen og layoutet blev
+          fundet ved at benytte bl.a. design sprint som metode. Det fandt jeg
+          meget nyttigt da jeg havde svært ved at finde på et koncept i starten.
         </p>
+        <p>
+          Da konceptet var fastlagt, udarbejdede jeg en HI-FI-prototype i Adobe
+          XD der løbende kunne testes og forbedres. Her lærte jeg om værktøjerne
+          ui-kits og components, der gjorde det nemmere og hurtigere for mig at
+          lave prototypen. Jeg brugte bl.a. components i menuen, CTA-knapper,
+          footer m.m.
+        </p>
+        <p>
+          For at kunne skabe et brugervenligt produkt lærte jeg om user
+          interface og konventioner. Det havde betydning for min placering af
+          logoet, indkøbskurven, søgefeltet m.m. Dette lærte jeg blandt andet
+          gennem tænke-højt-testen hvor man observerer brugerens adfærd samt
+          sitets usability. Derudover lærte jeg om copy og microcopy der er små
+          tekster der skal motivere brugeren til at udføre en handling samtidig
+          med at brugeren får den bedste oplevelse.
+        </p>
+        <p>
+          Under temaet fik vi færdigheder i Photoshop til at kunne producere
+          billeder til prototypen. I mit tilfælde lærte jeg at lave splashcolor
+          effekt på mine produkter samt duotone billeder. Ud fra undersøgelser
+          blev jeg bekræftet i at mit farverige design tiltrak opmærksomheden
+          som ønsket.
+        </p>
+        <p>
+          Til sidst skulle det færdige produkt pitches, hvor vi argumenterede
+          for de designmæssige og funktionelle beslutninger vi havde taget ud
+          fra data og reelle indsigter vi har fået fra vores research, test og
+          feedback. Her lærte jeg at mit pitch skulle have mere fokus på selve
+          processen og de data/indsigter jeg havde indsamlet end det færdige
+          produkt.
+        </p>
+
         <button>
           <a
             href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
             target="_blank"
             >SE PROTOTYPE</a
+          >
+        </button>
+        <button>
+          <a
+            href="https://ceciliejasmin.dk/kea/03_ux/dokumentation.pdf"
+            target="_blank"
+            >DOKUMENTATION</a
           >
         </button>
       </section>
@@ -107,14 +119,6 @@
         <div class="doku">
           <div class="doku_indhold">
             <h2>DOKUMENTATION</h2>
-
-            <button>koncept</button>
-            <button>desk research</button>
-            <button>observations research</button>
-            <button>Interview research</button>
-            <button>Survey research</button>
-            <button>Solution Sketch</button>
-            <button>test af prototyoe</button>
           </div>
         </div>
       </section>
